--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,8 +5,12 @@ on:
     branches: [main]
 
 jobs:
-  mongo-init:
+  mongo-init-test:
     runs-on: ubuntu-latest
+
+    env:
+      ports: ${{ secrets.PORT }}
+      MONGO_URI: ${{ secrets.MONGO_URI }}
 
     services:
      mongo:
@@ -36,26 +40,8 @@ jobs:
         run: |
           npm install
           node seedTaskData.js
-  test:
-     runs-on: ubuntu-latest
-     needs: mongo-init
 
-     steps:
-       - name: Checkout Repository
-         uses: actions/checkout@v3
-
-       - name: Setup Node.js
-         uses: actions/setup-node@v3
-         with:
-           node-version: '18'
-
-       - name: install Dependencies for backend
-         working-directory: ././backend
-         run: npm install
-
-       - name: Running backend tests
-         working-directory: ././backend
-         run: npm test
-
-         
-
+      - name: Running backend tests
+        working-directory: ././backend
+        run: npm test
+  
